# StormByte-System

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml  doc.yml  jekyll-gh-pages.yml
cmake/: asan.cmake  install.cmake  optimizations.cmake  outputflags.cmake
doc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/private/StormByte/system/: pipe.cxx  pipe.hxx
lib/private/system/: pipe.cxx  pipe.hxx
lib/public/StormByte/system/: exception.cxx  exception.hxx  process.cxx  process.hxx  variable.cxx  variable.hxx  visibility.h
lib/public/system/: exception.cxx  exception.hxx  process.cxx  process.hxx  variable.cxx  variable.hxx
lib/system/: process.cxx  process.hxx  system.cxx  system.hxx  visibility.h
test/: CMakeLists.txt  process_test.cxx  test_handlers.h
